--- a/src/code/IterationZero.Domain.Common/IterationZero.Domain.Common.csproj
+++ b/src/code/IterationZero.Domain.Common/IterationZero.Domain.Common.csproj
@@ -1,6 +1,6 @@
-﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
-  
   <PropertyGroup>
     <AssemblyName>IterationZero.Domain.Common</AssemblyName>
     <Company>Iteration Zero Software</Company>
@@ -9,17 +9,15 @@
     <Authors>Iteration Zero Software</Authors>
     <Description>Iteration Zero common domain library.</Description>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <RootNamespace>IterationZero.Domain.Common</RootNamespace>
   </PropertyGroup>
-
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="NETStandard.Library">
       <Version>1.6</Version>
@@ -29,6 +27,5 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
