--- a/src/tests/IterationZero.Domain.Common.Tests.Unit/IterationZero.Domain.Common.Tests.Unit.csproj
+++ b/src/tests/IterationZero.Domain.Common.Tests.Unit/IterationZero.Domain.Common.Tests.Unit.csproj
@@ -1,20 +1,18 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.0</TargetFramework>
+    <RootNamespace>IterationZero.Domain.Common.Tests.Unit</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\code\IterationZero.Domain.Common\IterationZero.Domain.Common.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.App">
       <Version>1.0.1</Version>
@@ -26,6 +24,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>15.0.0-preview-20161024-02</Version>
     </PackageReference>
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
     <PackageReference Include="xunit">
       <Version>2.2.0-beta3-build3402</Version>
     </PackageReference>
@@ -33,6 +32,5 @@
       <Version>2.2.0-beta4-build1188</Version>
     </PackageReference>
   </ItemGroup>
-
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
